[package]
name = "bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
native-tls = "0.2.18"
prost = "0.10.0"
sha2 = "0.11.0"
tokio = { version = "1.50.0", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
tonic = "0.7"
uuid = { version = "1.8", features = ["v4"] }
vortex-otp-lib = "0.1.4"
tungstenite = "0.21"
tokio-native-tls = "0.3"
futures-util = "0.3"
futures = "0.3.32"
hex = "0.4.3"
